feature: implements ci with dbt docs (#3)
* chore: update elementary deps

* fix: tiny fixes to make the api work on fly.io

change the port
bad dir specs
empty defaults
etc

* new: add fly.io toml configuration files for deployment

api still needs secrets, like POSTGRES_PASSWORD and SECRET_KEY

* fix: remove alembic from prestart script

the api does not use migrations, and has data from dbt instead

* new: add basic dbt deps image with docker-compose

* new: add root endpoint to API router

* change: remove unused 'place' column in Location model

* ci: add first ci version

* new: add node colors to dbt graph

* ci: add elementary report to pages

* docs: update README and set landing page for gh-pages

* chore: housekeeping

let dbt build run on main only

--- a/dbt_pinochet/profiles/profiles.yml
+++ b/dbt_pinochet/profiles/profiles.yml
@@ -9,26 +9,39 @@ dbt_pinochet:
             user: postgres
             pass: postgres
             dbname: pinochet
-            schema: dbt_dev
+            schema: api
 
-        api:
+        pre:
             type: postgres
             threads: 1
-            host: 0.0.0.0
-            port: 5433
-            user: postgres
-            pass: postgres
-            dbname: pinochet
-            schema: api
+            host: "{{ env_var('DBT_DB_PINOCHET_PROD_HOST') }}"
+            port: "{{ env_var('DBT_DB_PINOCHET_PROD_PORT') | int }}"
+            user: "{{ env_var('DBT_DB_PINOCHET_PROD_USERNAME') }}"
+            pass: "{{ env_var('DBT_DB_PINOCHET_PROD_PASSWORD') }}"
+            dbname: "{{ env_var('DBT_DB_PINOCHET_PROD_DBNAME') }}"
+            schema: pre
 
         prod:
             type: postgres
             threads: 1
             host: "{{ env_var('DBT_DB_PINOCHET_PROD_HOST') }}"
-            port: "{{ env_var('DBT_DB_PINOCHET_PROD_PORT') }}"
+            port: "{{ env_var('DBT_DB_PINOCHET_PROD_PORT') | int }}"
             user: "{{ env_var('DBT_DB_PINOCHET_PROD_USERNAME') }}"
             pass: "{{ env_var('DBT_DB_PINOCHET_PROD_PASSWORD') }}"
-            dbname: "{{ env_var('DBT_DB_PINOCHET_DBNAME') }}"
-            schema: "{{ env_var('DBT_DB_PINOCHET_PROD_SCHEMA') }}"
+            dbname: "{{ env_var('DBT_DB_PINOCHET_PROD_DBNAME') }}"
+            schema: api
 
     target: dev
+
+
+elementary:
+  outputs:
+    default:
+      type: "postgres"
+      host: "{{ env_var('DBT_DB_PINOCHET_PROD_HOST') }}"
+      port: "{{ env_var('DBT_DB_PINOCHET_PROD_PORT') | int }}"
+      user: "{{ env_var('DBT_DB_PINOCHET_PROD_USERNAME') }}"
+      pass: "{{ env_var('DBT_DB_PINOCHET_PROD_PASSWORD') }}"
+      dbname: "{{ env_var('DBT_DB_PINOCHET_PROD_DBNAME') }}"
+      schema: "api_elementary"
+      threads: 1
