--- a/services/dbt-deps-image/Dockerfile
+++ b/services/dbt-deps-image/Dockerfile
@@ -6,7 +6,7 @@
 ARG WORKDIR="/app"
 
 # global username
-ARG USERNAME=daniellopez
+ARG USERNAME=dbt_user
 ARG USER_UID=1000
 ARG USER_GID=1000
 ARG USER_HOME="/home/${USERNAME}"
@@ -77,20 +77,53 @@ WORKDIR ${WORKDIR}
 RUN chown -R ${USER_UID}:${USER_GID} ${WORKDIR}
 
 # Copy only the files needed for installing dependencies
-COPY --chown=${USER_UID}:${USER_GID} pyproject.toml poetry.lock prestart.sh README.md ${WORKDIR}/
+COPY --chown=${USER_UID}:${USER_GID} pyproject.toml poetry.lock ${WORKDIR}/
 
 # Install dependencies
 RUN poetry install --no-root
 
-# Copy the rest of the files
-COPY --chown=${USER_UID}:${USER_GID} src ${WORKDIR}/src
 
-# Finalization
-RUN poetry install --only-root
+# ---------------------------------------------------------------------------- #
+#                                  final layer                                 #
+# ---------------------------------------------------------------------------- #
 
+FROM python:${PYTHON_VERSION}-slim AS final
+
+# Renew args
+ARG WORKDIR
+ARG USERNAME
+ARG USER_UID
+ARG USER_GID
+ARG USER_HOME
+
+# prepare the $PATH
+ENV PATH=${WORKDIR}/.venv/bin:$PATH \
+    PYTHONPATH=${WORKDIR} \
+    # Don't buffer `stdout`
+    PYTHONUNBUFFERED=1 \
+    # Don't create `.pyc` files:
+    PYTHONDONTWRITEBYTECODE=1
+
+# copy the user from the builder stage
+RUN groupadd --gid $USER_GID "${USERNAME}" \
+    && useradd --uid $USER_UID --gid $USER_GID -m "${USERNAME}"
+
+RUN mkdir -p ${USER_HOME} \
+    && chown ${USER_UID}:${USER_GID} ${USER_HOME}
+
+RUN mkdir -p ${WORKDIR} \
+    && chown ${USER_UID}:${USER_GID} ${WORKDIR}
+
+# copy the virtual environment from the builder stage
+COPY --from=builder --chown=${USER_UID}:${USER_GID} ${WORKDIR}/.venv ${WORKDIR}/.venv
+
+# set the working directory
+WORKDIR ${WORKDIR}
+
+# make user non-root
 USER ${USERNAME}
 
-ENTRYPOINT ["/bin/sh", "-c"]
-CMD [ "/app/prestart.sh" ]
+ENTRYPOINT ["dbt"]
+CMD [ "ls" ]
 
-EXPOSE 8080
+EXPOSE 8089
