--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,11 +2,11 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-    version: 1.17.2
+    version: 1.18.1
 plugins:
     sources:
         - id: trunk
-          ref: v1.3.0
+          ref: v1.4.1
           uri: https://github.com/trunk-io/plugins
 runtimes:
     enabled:
@@ -16,24 +16,24 @@ runtimes:
 lint:
     enabled:
         - actionlint@1.6.26
-        - bandit@1.7.5
-        - black@23.9.1
-        - checkov@3.1.9
+        - bandit@1.7.6
+        - black@23.12.1
+        - checkov@3.1.50
         - dotenv-linter@3.3.0
         - git-diff-check
         - hadolint@2.12.0
-        - isort@5.12.0
-        - markdownlint@0.37.0
-        - osv-scanner@1.4.3
-        - prettier@3.1.0
-        - ruff@0.1.6
+        - isort@5.13.2
+        - markdownlint@0.38.0
+        - osv-scanner@1.5.0
+        - prettier@3.1.1
+        - ruff@0.1.9
         - shellcheck@0.9.0
         - shfmt@3.6.0
         - sqlfluff@2.3.5
         - taplo@0.8.1
-        - terrascan@1.18.3
-        - trivy@0.47.0
-        - trufflehog@3.63.2-rc0
+        - terrascan@1.18.11
+        - trivy@0.48.1
+        - trufflehog@3.63.7
         - yamllint@1.33.0
 actions:
     disabled:
