--- a/.github/workflows/dbt-docs-generate.yml
+++ b/.github/workflows/dbt-docs-generate.yml
@@ -1,4 +1,4 @@
-name: docs
+name: deploy
 
 on:
   push:
@@ -83,3 +83,14 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
+
+  deploy-api-fly-io:
+    name: Deploy fastapi app to fly.io
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --remote-only
+        working-directory: $GITHUB_WORKSPACE/services/pinochet-api
+    env:
+      FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
