--- a/.github/workflows/dbt-docs-generate.yml
+++ b/.github/workflows/dbt-docs-generate.yml
@@ -85,12 +85,13 @@ jobs:
         uses: actions/deploy-pages@v3
 
   deploy-api-fly-io:
+    needs: dbt-docs-generate
     name: Deploy fastapi app to fly.io
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only
-        working-directory: $GITHUB_WORKSPACE/services/pinochet-api
+        working-directory: ./services/pinochet-api
     env:
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
