change: update hostname in ontop config
use postgis name assigned by docker instead of 0.0.0.0

--- a/docker-compose.ontop.yml
+++ b/docker-compose.ontop.yml
@@ -2,7 +2,10 @@ version: '3.4'
 
 services:
   ontop:
-    image: ontop/ontop
+    image: ghcr.io/diegoquintanav/pinochet-sparql-ontop:latest
+    build:
+      context: services/ontop
+      dockerfile: Dockerfile
     environment:
       ONTOP_ONTOLOGY_FILE: /opt/ontop/input/mapping.protege.ttl
       ONTOP_MAPPING_FILE: /opt/ontop/input/mapping.protege.obda
@@ -11,10 +14,8 @@ services:
       ONTOP_CORS_ALLOWED_ORIGINS: "*"
       ONTOP_DEV_MODE: "true"
     volumes:
-      # we map the properties file separately because db hostname and port change internally
-      - ./services/ontop/input/mapping.protege.properties:/opt/ontop/input/mapping.protege.properties
       # files needed by ontop to map the ontology to the db
-      - ./datasets/pinochet-rettig/semantics:/opt/ontop/input
+      - ./services/ontop/semantics:/opt/ontop/input
       # postgres jdbc driver to connect to postgis
       - ./services/ontop/jdbc:/opt/ontop/jdbc
     ports:
