--- a/services/ontop/semantics/mapping.protege.properties.example
+++ b/services/ontop/semantics/mapping.protege.properties.example
@@ -1,5 +1,5 @@
 #Fri Dec 08 19:52:17 CET 2023
 jdbc.password=postgres
 jdbc.user=postgres
-jdbc.url=jdbc\:postgresql\://0.0.0.0\:5433/pinochet
+jdbc.url=jdbc\:postgresql\://postgis\:5432/pinochet
 jdbc.driver=org.postgresql.Driver
