--- a/docker-compose.ontop.yml
+++ b/docker-compose.ontop.yml
@@ -13,9 +13,13 @@ services:
       ONTOP_PORTAL_FILE: /opt/ontop/input/mapping.protege.portal.toml
       ONTOP_CORS_ALLOWED_ORIGINS: "*"
       ONTOP_DEV_MODE: "true"
+      ONTOP_DB_USER: ${ONTOP_DB_USER-postgres}
+      ONTOP_DB_PASSWORD: ${ONTOP_DB_PASSWORD-postgres}
+      ONTOP_DB_URL: ${ONTOP_DB_URL-jdbc:postgresql://postgis:5432/pinochet}
+      ONTOP_DB_DRIVER: ${ONTOP_DB_DRIVER-org.postgresql.Driver}
     volumes:
       # files needed by ontop to map the ontology to the db
-      - ./services/ontop/semantics:/opt/ontop/input
+      - ./services/ontop/input:/opt/ontop/input
       # postgres jdbc driver to connect to postgis
       - ./services/ontop/jdbc:/opt/ontop/jdbc
     ports:
