--- a/services/ontop/Dockerfile
+++ b/services/ontop/Dockerfile
@@ -6,11 +6,9 @@ ENV ONTOP_PROPERTIES_FILE=/opt/ontop/input/mapping.protege.properties
 ENV ONTOP_PORTAL_FILE=/opt/ontop/input/mapping.protege.portal.toml
 ENV ONTOP_CORS_ALLOWED_ORIGINS="*"
 ENV ONTOP_DEV_MODE="false"
-
 # files needed by ontop to map the ontology to the db
-COPY ./semantics/* /opt/ontop/input/*
-
+COPY ./input/* /opt/ontop/input/
 # postgres jdbc driver to connect to postgis
-COPY ./jdbc/* /opt/ontop/jdbc/*
+COPY ./jdbc/* /opt/ontop/jdbc/
 
 EXPOSE 8080
