--- a/.github/workflows/dbt-docs-generate.yml
+++ b/.github/workflows/dbt-docs-generate.yml
@@ -8,6 +8,7 @@ on:
       - "poetry.lock"
       - "pyproject.toml"
       - ".github/workflows/dbt-docs-generate.yml"
+      - ".github/assets/**"
       - "services/dbt-deps-image/**"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
