dev: update .editorconfig with settings for Makefile and others

--- a/services/pinochet-api/alembic.ini
+++ b/services/pinochet-api/alembic.ini
@@ -6,7 +6,7 @@ script_location = alembic
 
 # template used to generate migration files
 # https://stackoverflow.com/a/69118284/5819113
-file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(hour).2d-%%(minute).2d-%%(second).2d_%%(rev)s_%%(slug)s
+file_template = %%(year)d%%(month).2d%%(day).2d_%%(epoch)s_%%(rev)s_%%(slug)s
 
 # to exclude postgis tables from migrations
 # https://gist.github.com/utek/6163250?permalink_comment_id=3548027#gistcomment-3548027
