--- a/.editorconfig
+++ b/.editorconfig
@@ -16,3 +16,19 @@ indent_size = 2
 
 [*.{yml,yaml}]
 indent_size = 2
+
+[Makefile]
+indent_style = tab
+
+[*.md]
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[.editorconfig]
+indent_style = space
+indent_size = 2
+
+[.ini]
+indent_style = tab
+indent_size = 4
+insert_final_newline = true
