--- a/services/pinochet-api/pyproject.toml
+++ b/services/pinochet-api/pyproject.toml
@@ -18,12 +18,13 @@ uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
 sqlalchemy = "^2.0.23"
 alembic = "^1.12.1"
 loguru = "^0.7.2"
-python-jose = "^3.3.0"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 typer = "^0.9.0"
 pydantic-settings = "^2.0.3"
 psycopg2-binary = "^2.9.9"
 tenacity = "^8.2.3"
 strawberry-graphql = {extras = ["debug-server", "fastapi"], version = "^0.216.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 
 [tool.poetry.group.dev.dependencies]
