--- a/.ruff.toml
+++ b/.ruff.toml
@@ -6,4 +6,4 @@ ignore = ["E501", "D401", "D400", "D415"]
 
 [flake8-bugbear]
 # Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
-extend-immutable-calls = ["typer.Option"]
+extend-immutable-calls = ["typer.Option", "fastapi.Depends"]
