--- a/services/pinochet-api/Dockerfile
+++ b/services/pinochet-api/Dockerfile
@@ -82,6 +82,9 @@ COPY --chown=${USER_UID}:${USER_GID} pyproject.toml poetry.lock prestart.sh READ
 # Install dependencies
 RUN poetry install --no-root
 
+# Copy migrations
+COPY --chown=${USER_UID}:${USER_GID} alembic alembic.ini ${WORKDIR}/
+
 # Copy the rest of the files
 COPY --chown=${USER_UID}:${USER_GID} src ${WORKDIR}/src
 
