new: implement token authentication (#15)
* new: add initial alembic setup for db migrations

* ref: adapt alembic boilerplate to allow model exclusion and data upgrades

* dev: update .editorconfig with settings for Makefile and others

* dev: add linter exceptions for rule E402 to mako script

* dev: fix db url retrieval using os

* dev: make alembic template behave with better ruff defaults

* new: add first alembic revision that inserts daniel lopez as user

* dev: add passlib and update deps

* ref: update Makefile to include fastapi commands and remove unused commands

* fix: update victim_id instead of individual_id

* dev: update compose fastapi defaults

not setting the secret key regenerates it at runtime during dev, breaking auth

* fix: update location schema to match the dbt model

* new: add JWT authentication to routes

closes #4

* dev: add alembic upgrade command to prestart command

* dev: add api.down to Makefile

* ref: move graphql application outside of endpoints

* ref: rename api to router for clarity

* chore: add alembic to docker images

* docs: update README.md

--- a/docker-compose.fastapi.yml
+++ b/docker-compose.fastapi.yml
@@ -3,12 +3,14 @@ services:
   fastapi:
     image: ghcr.io/diegoquintanav/pinochet-api:latest
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?You must provide a password for the database connection.}
+      POSTGRES_DB: ${POSTGRES_DB:-pinochet}
       POSTGRES_HOST: postgis
       POSTGRES_PORT: 5432
       UVICORN_RELOAD: true
+      # don't use this key in production
+      SECRET_KEY: ${FASTAPI_SECRET_KEY:-QD6P65NhEd1h6kCnW7B02EXXgXSXMSptTZ0dyNRmSYI}
       API_ENV: dev
     build:
       context: ./services/pinochet-api
@@ -16,6 +18,8 @@ services:
       - 8888:8080
     volumes:
       - ./services/pinochet-api/src/:/app/src/
+      - ./services/pinochet-api/alembic/:/app/alembic/
+      - ./services/pinochet-api/alembic.ini:/app/alembic.ini
       - pinochet-api-venv:/home/daniellopez/app/.venv
 
 volumes:
