new: add prestart flow running on localhost

--- a/example.env
+++ b/example.env
@@ -5,6 +5,8 @@ COMPOSE_FILE=docker-compose.postgis.yml:docker-compose.fastapi.yml
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=pinochet
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5433
 
 # dbt
 DBT_PROJECT_DIR=dbt_pinochet
