--- a/.github/workflows/dbt-docs-generate.yml
+++ b/.github/workflows/dbt-docs-generate.yml
@@ -10,6 +10,7 @@ on:
       - ".github/workflows/dbt-docs-generate.yml"
       - ".github/**"
       - "services/dbt-deps-image/**"
+      - "services/pinochet-api/**"
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
