--- a/docker-compose.postgis.yml
+++ b/docker-compose.postgis.yml
@@ -8,17 +8,34 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./services/postgis/docker-entrypoint-initdb.d/create_postgrest_roles.sh:/docker-entrypoint-initdb.d/create_postgrest_roles.sh
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_USER: ${POSTGRES_USER-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_DB: ${POSTGRES_DB-pinochet}
       PGRST_AUTHENTICATOR_PASSWORD: ${PGRST_AUTHENTICATOR_PASSWORD}
     ports:
       - 5433:5432
     networks:
       - default
 
+  postgis-test:
+    image: postgis/postgis:15-3.4
+    volumes:
+      - pgdata-test:/var/lib/postgresql/data
+      - ./services/postgis/docker-entrypoint-initdb.d/create_postgrest_roles.sh:/docker-entrypoint-initdb.d/create_postgrest_roles.sh
+    environment:
+      POSTGRES_USER: postgres_test
+      POSTGRES_PASSWORD: postgres_password_test
+      POSTGRES_DB: pinochet_test
+      PGRST_AUTHENTICATOR_PASSWORD: ${PGRST_AUTHENTICATOR_PASSWORD}
+    ports:
+      - 5434:5432
+    networks:
+      - default
+
 volumes:
   pgdata:
+    driver: local
+  pgdata-test:
     driver: local
 
 networks:
