ref: make settings behave using python-decouple instead of pydantic
this is a huge refactor. it involves dropping BaseSettings usage from pydantic and relying on a more simple approach: load from environment if available, load a sensible default if missing, hardcode testing and development variables.

This adds some tests to ensure the proper database is being used. It also refactors the CLI to reflect new usage

--- a/services/pinochet-api/Dockerfile
+++ b/services/pinochet-api/Dockerfile
@@ -48,6 +48,12 @@ ENV PATH=/opt/pipx/bin:${WORKDIR}/.venv/bin:$PATH \
     # make poetry create a .venv folder in the project
     POETRY_VIRTUALENVS_IN_PROJECT=true
 
+# install basic packages
+RUN apt-get update && apt-get install -y --no-install-recommends \
+	curl iputils-ping netcat \
+	&& apt-get clean \
+	&& rm -rf /var/lib/apt/lists/*
+
 # ------------------------------ add user ----------------------------- #
 
 RUN groupadd --gid $USER_GID "${USERNAME}" \
