--- a/docker-compose.postgis.yml
+++ b/docker-compose.postgis.yml
@@ -8,10 +8,10 @@ services:
       - pgdata:/var/lib/postgresql/data
       - ./services/postgis/docker-entrypoint-initdb.d/create_postgrest_roles.sh:/docker-entrypoint-initdb.d/create_postgrest_roles.sh
     environment:
-      POSTGRES_USER: ${POSTGRES_USER-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB-pinochet}
-      PGRST_AUTHENTICATOR_PASSWORD: ${PGRST_AUTHENTICATOR_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER-postgres_dev}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-dontusemeinprod}
+      POSTGRES_DB: ${POSTGRES_DB-pinochet_dev}
+      PGRST_AUTHENTICATOR_PASSWORD: ${PGRST_AUTHENTICATOR_PASSWORD:-dontusemeinprod}
     ports:
       - 5433:5432
     networks:
@@ -26,7 +26,7 @@ services:
       POSTGRES_USER: postgres_test
       POSTGRES_PASSWORD: postgres_password_test
       POSTGRES_DB: pinochet_test
-      PGRST_AUTHENTICATOR_PASSWORD: ${PGRST_AUTHENTICATOR_PASSWORD}
+      PGRST_AUTHENTICATOR_PASSWORD: dontusemeinprod
     ports:
       - 5434:5432
     networks:
