--- a/services/pinochet-api/pyproject.toml
+++ b/services/pinochet-api/pyproject.toml
@@ -35,6 +35,7 @@ pytest = "^7.4.3"
 ipykernel = "^6.29.4"
 pandas = "^2.2.2"
 httpx = "^0.27.0"
+sqlalchemy-model-faker = "^0.0.5"
 
 [build-system]
 requires = ["poetry-core"]
