--- a/services/pinochet-api/pyproject.toml
+++ b/services/pinochet-api/pyproject.toml
@@ -26,6 +26,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 loguru = "^0.7.2"
 fastapi-healthz = "^1.0.0"
 python-decouple = "^3.8"
+geoalchemy2 = "^0.15.2"
 
 
 [tool.poetry.group.dev.dependencies]
