--- a/pinochet-rettig-linked-data/ontop/input/mapping.protege.properties.example
+++ b/pinochet-rettig-linked-data/ontop/input/mapping.protege.properties.example
@@ -1,5 +1,5 @@
 #Fri Dec 08 17:40:28 CET 2023
-jdbc.password=postgres
-jdbc.user=postgres
-jdbc.url=jdbc\:postgresql\://postgis\:5432/pinochet
+jdbc.password=dontusemeinprod
+jdbc.user=postgres_dev
+jdbc.url=jdbc\:postgresql\://postgis\:5432/pinochet_dev
 jdbc.driver=org.postgresql.Driver
