fix: update test with individualized rows

--- a/pinochet-rettig-dbt/dbt_pinochet/models/datasets/staging/_staging__models.yml
+++ b/pinochet-rettig-dbt/dbt_pinochet/models/datasets/staging/_staging__models.yml
@@ -8,6 +8,7 @@ models:
             - group_id
             - event_id
             - location_id
+            - location_n
     description: ""
     columns:
       - name: individual_id
