chore: update example.env

--- a/example.env
+++ b/example.env
@@ -1,14 +1,14 @@
 # docker compose
 COMPOSE_FILE=docker-compose.postgis.yml:docker-compose.fastapi.yml
 
-# postgis
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=pinochet
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5433
-
-# pinochet-rettig-dbt
+# dbt
 DBT_PROJECT_DIR=pinochet-rettig-dbt/dbt_pinochet
 
+# postgis, as seen by fastapi and ontop
+POSTGRES_USER=postgres_dev
+POSTGRES_PASSWORD=dontusemeinprod
+POSTGRES_DB=pinochet_dev
 
+# postgis as seen by external clients
+POSTGRES_HOST=0.0.0.0
+POSTGRES_PORT=5433
